--- a/pass1.html
+++ b/pass1.html
@@ -34,7 +34,54 @@ onpageshow="if(event.persisted) noBack():" onunload="" ; background="im11.jpg">
             <br>
            <br>
         </header>
-    
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+			<script src="/__/firebase/7.1.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+			<script src="/__/firebase/7.1.0/firebase-analytics.js"></script>
+
+
+
+
+<!-- Initialize Firebase -->
+			<script src="/__/firebase/init.js"></script>
+
+
+
+			
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-analytics.js"></script>
+
+<script>
+ 
+  var firebaseConfig = {
+    apiKey: "AIzaSyAJ8zNN5E63pZndoRpjD_4LWz2qYi4kw1w",
+    authDomain: "code-quest-7b6b1.firebaseapp.com",
+    databaseURL: "https://code-quest-7b6b1.firebaseio.com",
+    projectId: "code-quest-7b6b1",
+    storageBucket: "code-quest-7b6b1.appspot.com",
+    messagingSenderId: "94997981386",
+    appId: "1:94997981386:web:025cacd03d4df53b816c33",
+    measurementId: "G-N0EBE5G3K7"
+  };
+ 
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+
+</script>
+
+
+
+
+
+
+<script src="index.js"></script>
+
     </body>
     <script  type="text/javascript">
 
