--- a/timer.html
+++ b/timer.html
@@ -3,12 +3,13 @@
 <html lang="en">
     <head>
         <title>timer</title>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="timer.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
       </head>
 
 <body style="background-color:black;">
@@ -19,14 +20,19 @@
 
   
   <div class="row">
+      <ul class="main-nav">
     <div class = "logo">
-                <img src="logogame final.png">
-                <img id="inl" src="white.png">
+              <li>  <img src="logogame final.png">
+              </li><li><img id="inl" src="white.png"></li>
      </div>
-        <ul class="main-nav">
+        
           <li>
-          <p>  Welcome to Code Quest</p>
-        </li>   
+        <p>
+           <div class="progress-bar">100%</div>
+
+
+
+           </p></li>   
           <li>  
         <p id="demo" class="timer" >Time Left</p>
       </li>  
