--- a/attempts.html
+++ b/attempts.html
@@ -6,19 +6,13 @@
   
     </head>
     
-   <body onload="noBack();" onpageshow="if(event.persisted) noBack():" onunload=""; >
-            <header background="treasure.jpg">
-                <div class="row">
-                    <div class = "logo">
-                        <img src="logogame final.png">
-                        <img id="inl" src="white.png">
-                    </div>
-                    <ul class="main-nav">
-                      <li class="active"><a href= " " > END </a></li>
-                    </ul>
-                </div>
-                   <br> <h1>Thanks you for playing Code Quest <br><br>
-                     You have exhausted all your attempts!</h1>
+   <body onload="noBack();" onpageshow="if(event.persisted) noBack():" onunload=""; background="images.jpg">
+                  
+                   <br>
+                   <h1>Thanks you for playing Code Quest <br><br>
+                     You have exhausted all your attempts!</h1><br><br>
+
+                     <h4>"Heroes are made by the path they choose, not the powers they are graced with"</h4>
 
             </header>
 
