--- a/ques1.html
+++ b/ques1.html
@@ -19,18 +19,29 @@ background= "coding5.gif">
 <div transbox>
 
                 <p> <br>
-                    There are a number of plants in Asgard. Each of these plants has been treated with some amount of pesticide. After each day, if any plant has more pesticide than the plant on its left, being weaker than the left one, it dies.
-                    You are given the initial values of the pesticide in each of the plants. Print the number of days after which no plant dies, i.e. the time after which there are no plants with more pesticide content than the 
-                    plant to their left.
-                    <br>For example, pesticide levels . Using a -indexed array, day  plants  and  die leaving . On day , plant  of the current array dies leaving . As there is no plant with a higher concentration of pesticide than the one to its left, plants stop dying after day .
-                    <br>Function Description
-                    <br>Complete the function poisonousPlants in the editor below. It must return an integer representing the number of days until plants no longer die from pesticide.
-                    poisonousPlants has the following parameter(s):
-                    <br>	p: an array of integers representing pesticide levels in each plant
-                    <br>Input Format
-                    <br>The first line contains an integer , the size of the array .
-                    <br>The next line contains  space-separated integers .
-                   
+                 Given N planets numbered from 1 to N. A skrull at planet 1, jumps from planet to planet in multiples of Aj (Aj, 2Aj, 3Aj).
+j is specific to the skrull. Whenever a skrull reaches a planet, it makes a small colony there. You have to find out how many planets, from 1 to N, are left not colonised after all K skrulls have reached the end. Each skrull has its own jump factor denoted by Aj, and each skrull starts at planet number 1.
+Input:
+The first line consists of a integer T denoting the number of testcases. T test cases follow. Each test case consists of two lines of input. The first line consists of two integers: N, which denotes the number of planets; and K, which denotes the number of skrulls. Second line of each test case consists of K space separated integers denoting the jumblip factor of skrulls.
+
+                    Output:
+For each testcase, in a new line, print a single integer denoting the number of planets which  are left not colonized.
+
+                    Constraints:
+1 <= T <= 100
+1 <= N <= 107
+1 <= K <= 107
+1 <= Aj <= 100
+
+
+                    If the Input is:
+
+                    7
+
+                    6 5 8 4 7 10 9
+
+                    What is the output?
+
         
                  <form name= "myform" action="" method="post">
                     <div>
