--- a/ques1.html
+++ b/ques1.html
@@ -18,29 +18,29 @@ background= "coding5.gif">
 </div>
 <div transbox>
 
-                <p> <br>
+                <p> 
                  Given N planets numbered from 1 to N. A skrull at planet 1, jumps from planet to planet in multiples of Aj (Aj, 2Aj, 3Aj).
-j is specific to the skrull. Whenever a skrull reaches a planet, it makes a small colony there. You have to find out how many planets, from 1 to N, are left not colonised after all K skrulls have reached the end. Each skrull has its own jump factor denoted by Aj, and each skrull starts at planet number 1.
-Input:
-The first line consists of a integer T denoting the number of testcases. T test cases follow. Each test case consists of two lines of input. The first line consists of two integers: N, which denotes the number of planets; and K, which denotes the number of skrulls. Second line of each test case consists of K space separated integers denoting the jumblip factor of skrulls.
+j is specific to the skrull. Whenever a skrull reaches a planet, it makes a small colony there. You have to find out how many planets, from 1 to N, are left not colonised after all K skrulls have reached the end. Each skrull has its own jump factor denoted by Aj, and each skrull starts at planet number 1.<br>
+Input:<br>
+The first line consists of a integer T denoting the number of testcases. T test cases follow. Each test case consists of two lines of input. The first line consists of two integers: N, which denotes the number of planets; and K, which denotes the number of skrulls. Second line of each test case consists of K space separated integers denoting the jumblip factor of skrulls.<br>
 
-                    Output:
-For each testcase, in a new line, print a single integer denoting the number of planets which  are left not colonized.
+                    Output:<br>
+For each testcase, in a new line, print a single integer denoting the number of planets which  are left not colonized.<br>
 
-                    Constraints:
-1 <= T <= 100
-1 <= N <= 107
-1 <= K <= 107
-1 <= Aj <= 100
+                   Constraints:<br>
+1 <= T <= 100<br>
+1 <= N <= 107<br>
+1 <= K <= 107<br>
+1 <= Aj <= 100<br>
 
 
-                    If the Input is:
+                    If the Input is:<br>
 
-                    7
+                    7<br>
 
-                    6 5 8 4 7 10 9
+                    6 5 8 4 7 10 9<br>
 
-                    What is the output?
+                    What is the output?<br>
 
         
                  <form name= "myform" action="" method="post">
