--- a/ques3.html
+++ b/ques3.html
@@ -79,6 +79,24 @@ else
                 	1 ≤ u, v ≤ N<br>
                 	the channels describe a tree<br>
                 	1 ≤ sum of N over all test cases ≤ 250000<br>
+                If the Input is :<br>
+2<br>
+4<br>
+10 25 15 40<br>
+1 2 1<br>
+2 3 3<br>
+1 4 4<br>
+7<br>
+24786 24640 17641 19735 8667 15790 5948<br>
+3 7 17108<br>
+7 6 4875<br>
+7 1 9317<br>
+1 2 8597<br>
+3 4 28200<br>
+1 5 22026<br>
+
+What is the sum of the digits in the first line in the output?
+
                 
             
                  <form name= "myform" action=" " method="post">
