--- a/Ques5.html
+++ b/Ques5.html
@@ -83,8 +83,17 @@ background="codinggif.gif">
                 <br>	1 <= T <= 10
                 <br> 1 <= N <= 21
                 <br>1 <= K <= 8
-                <br> Subtask #1 (20 points) : 0 <= intensity of power <= 10^5
-                <br>Subtask #2 (80 points) : 0 <= intensity of power <= 10^10
+                <br>  0 <= intensity of power <= 10^5
+                <br> 0 <= intensity of power <= 10^10
+               <br> If the Input is :
+<br>2
+<br>5 3
+<br>1 2 4 5 6
+<br>5 3
+<br>1 2 4 5 7
+                <br>(YOU HAVE ONLY "1" CHANCE TO ATTEMT THIS QUES!!!!)
+                <br>What is the Output?
+
                 
                  <form name= "myform" action=" " method="post">
                     <div>
