--- a/Ques5.html
+++ b/Ques5.html
@@ -68,31 +68,30 @@ background="codinggif.gif">
                 </div>
              
 
-            <p> Iron man is man of equality. He needs your help to divide his "powers" evenly amongst all his followers. 
-                By doing this, Iron man can create equality amongst his followers and he'll be called a true "power".
-                Iron man has N powers, and K followers. Each power is given a numerical value which shows its intensity.
-                Your task is to determine whether it is possible to allocate all the powers to followers in such a way 
-                that the sum of intensities of the powers allocated to each follower is equal. Note : A power can be allocated to only one of the followers.
-                <br>Input<br>
-                The first line of the input contains an integer T, denoting the number of test cases. Then T test cases follow.
-                 The first line of each case contains two integers N and K, with N denoting the number of powers and K denoting the number of
-                followers. In the next line are N space separated integers denoting the intensities of each power.
-                <br>Output<br>
-                For each test case, output "yes" if it is possible to divide his powers equally amongst his followers; otherwise output "no" (without quotes).
-                <br><br>Constraints<br>
-                <br>	1 <= T <= 10
-                <br> 1 <= N <= 21
-                <br>1 <= K <= 8
-                <br>  0 <= intensity of power <= 10^5
-                <br> 0 <= intensity of power <= 10^10
-               <br> If the Input is :
-<br>2
-<br>5 3
-<br>1 2 4 5 6
-<br>5 3
-<br>1 2 4 5 7
-                <br>(YOU HAVE ONLY "1" CHANCE TO ATTEMT THIS QUES!!!!)
-                <br>What is the Output?
+            <p> Avengers are trying to chase down Ronen army. They're in a large galaxy with n planet. The planet are connected through realms. Furthermore, the planet are designed in such a way that there is exactly one way to reach from one planet to another planet. Formally, the network of planet in the galaxy forms a Tree.
+The planet of the galaxy are conveniently numbered from 1 through n. Initially, Avengers and Ronen army are in some planet of the galaxy. In each second, both Ronen army and Avengers make a move. Ronen army moves first, followed by Avengers. Note that both the movements of Ronen army and Avengers happen within a second. In a single move, a player might stay in the same planet or can choose to move to some adjacent planet. Both the players know each other's positions at all times. When both Avengers and Ronen army are in the same planet, Avengers will attack Ronen army. Both the players play optimally, i.e. Ronen army will try to avoid their death as long as they can, and Avengers will try to catch him as soon as possible.
+You are given Q queries. In each query, you are given two integers, x, y, where x denotes the planet in which Avengers is present, and y denotes the same for Ronen army. You have to find the time at which Avengers will catch Ronen army.
+<br>Input
+<br>The first line of the input contains an integer T denoting the number of the test cases.
+<br>The first line of each test case will contain two space separated integer n, Q denoting number of planet in the galaxy, and the number of queries, respectively.
+<br>Each of the next n - 1 lines contains two space separated integers u, v, denoting that there is an hallway between planet u and v in the galaxy.
+<br>Each of the next Q lines contains two space separated integers x, y, where x denotes the planet in which Avengers is present, whereas y denotes the planet in which Ronen army is present.
+<br>Output
+<br>For each test case, output a single integer corresponding to time at which Avengers will catch Ronen army.
+<br>Constraints
+<br>•	1 ≤ T ≤ 5
+<br>•	1 ≤ n, Q ≤ 105
+<br>•	1 ≤ u, v ≤ n
+<br>•	1 ≤ x, y ≤ n
+
+<br>	If Input is:
+<br>	1
+<br>	3 2
+<br>	1 2
+<br>	2 3
+<br>	1 2
+<br>	2 3
+  <br><br>	What is the LCM of the two outputs?
 
                 
                  <form name= "myform" action=" " method="post">
