--- a/ques4.html
+++ b/ques4.html
@@ -54,23 +54,28 @@ background="codinggif2.gif">
                 </div>
                 
 
-            <p> A group of connected 1's forms a spacecraft. The task is to complete the method findSpacecrafts() which returns the number of spacecrafts present. The function takes three arguments the first is the boolean matrix A and then the next two arguments are N and M denoting the size(N*M) of the matrix A .<br>
-Input:<br>
-The first line of input will be the number of testcases T, then T test cases follow. The first line of each testcase contains two space separated integers N and M. Then in the next line are the NxM inputs of the matrix A separated by space .<br>
-Output:<br>
-For each testcase in a new line, print the number of spacecrafts present.<br>
-Constraints:<br>
-1 <= T <= 100<br>
-1 <= N, M <= 50<br>
-0 <= A[i][j] <= 1<br>
+            <p> Bruce Banner has kept tesseract in a safe. But unfortunately he forgot the password to the safe where it is kept.
+But he knows how to hack the safe. To do this, you need to correctly answer questions asked by the embedded computer. The computer is very strange, and asks special questions, sometimes it can ask about 10000 question (really weird). Because of this, Bruce wants you to write a program that will help him to crack the safe.
+The questions are different, but there is only one type of question. Several numbers are given and between them one of three characters: *, +, - can be inserted. Note that in this case there is no priority for the operators, that is, if + is the before multiplication, you must first execute the operation of addition, and then multiplication (1 - 2 * 3 must be interpreted as (1 - 2) * 3 = -3 and not -5). The computer asks the minimum possible value of any valid expression.
+ 
+<br>Input
+<br>The first line of the input contains an integer T denoting the number of test cases. The first line of each test case contains a positive integer N. The second line contains N space separated integers A1, A2, ..., AN denoting the expression without the operators.
+ 
+<br>Output
+<br>For each test case, output a single line containing the minimal value of given expression.
+ 
+<br>Constraints
+<br>•	1 ≤ T ≤ 105
+<br>•	1 ≤ N ≤ 10
+<br>•	-9 ≤ Ai ≤ 9
 
-If the Input is:<br>
-2<br>
-3 3<br>
-1 1 0 0 0 1 1 0 1<br>
-4 4<br>
-1 1 0 0 0 0 1 0 0 0 0 1 0 1 0 0<br>
-Which digit occurs two times in the Output?
+ <br>If Input is:
+<br>2
+<br>3
+<br>1 2 3
+<br>1
+<br>9
+ <br>What is the sum of the two otputs?
 
 
             
