--- a/ques1.html
+++ b/ques1.html
@@ -19,29 +19,34 @@ background= "coding5.gif">
 <div transbox>
 
                 <p> 
-                 Given N planets numbered from 1 to N. A skrull at planet 1, jumps from planet to planet in multiples of Aj (Aj, 2Aj, 3Aj).
-j is specific to the skrull. Whenever a skrull reaches a planet, it makes a small colony there. You have to find out how many planets, from 1 to N, are left not colonised after all K skrulls have reached the end. Each skrull has its own jump factor denoted by Aj, and each skrull starts at planet number 1.<br>
-Input:<br>
-The first line consists of a integer T denoting the number of testcases. T test cases follow. Each test case consists of two lines of input. The first line consists of two integers: N, which denotes the number of planets; and K, which denotes the number of skrulls. Second line of each test case consists of K space separated integers denoting the jumblip factor of skrulls.<br>
+                 Iron man likes fighting games a lot. He owns a game called "Fight Club". In this game there are n players playing all the times. Every player has a power level (Ai). Every day one of the following 2 things happen:
+<br>•	Either one of these players get a power boost of X, now his power level increases by X.
+<br>•	Or two players X ad Y (with power levels Ax ad Ay) fight against each other ad if some player is having power level strictly greater than the other then he gets all the power (Ax+Ay) ad the power level of the other player becomes 0. If they have equal energies then it's a draw ad nothing happens.
 
-                    Output:<br>
-For each testcase, in a new line, print a single integer denoting the number of planets which  are left not colonized.<br>
-
-                   Constraints:<br>
-1 <= T <= 100<br>
-1 <= N <= 107<br>
-1 <= K <= 107<br>
-1 <= Aj <= 100<br>
-
-
-                    If the Input is:<br>
-
-                    7<br>
-
-                    6 5 8 4 7 10 9<br>
-
-                    What is the output?<br>
-
+<br>The above game continues for d days. Now you have the information of what happened on each day.
+<br>•	1 i X : ith player gets a power of X.
+<br>•	2 U V : meas the player U ad V fight against each other.
+<br>After every day you need to print the maximum power level that ay player has (Note that you just need to print power level, player number does not matter here).
+<br>Input
+<br>First line will contain 2 integers n ad d denoting the number of players in the game ad number of days for which the game is played respectively.
+<br>Next line contains n integers denoting the initial power levels of all the players.
+<br>Next d lines contain one of the 2 operations mentioned above.
+<br>Output
+<br>Print d lines with each integer(ith) denoting the Maximum power level after the ith day.
+<br>Constraints
+<br>•	1 <= n,d <= 105
+<br>•	1 <= Ai <= 109
+<br>•	1 <= i, U, V <= n
+<br>•	1 <= X <= 109
+  <br>If Input is:
+   <br>5 5
+                    <br>12 5 2 14 6
+                    <br>1 2 5
+                    <br>2 1 3
+                    <br>1 3 2
+                    <br>2 1 5
+                    <br>2 4 5
+<br>What is the sum of all prime factors of the Output(Count duplicate answers only once)?
         
                  <form name= "myform" action="" method="post">
                     <div>
