--- a/ques4.html
+++ b/ques4.html
@@ -54,28 +54,32 @@ background="codinggif2.gif">
                 </div>
                 
 
-            <p> Bruce Banner has kept tesseract in a safe. But unfortunately he forgot the password to the safe where it is kept.
-But he knows how to hack the safe. To do this, you need to correctly answer questions asked by the embedded computer. The computer is very strange, and asks special questions, sometimes it can ask about 10000 question (really weird). Because of this, Bruce wants you to write a program that will help him to crack the safe.
-The questions are different, but there is only one type of question. Several numbers are given and between them one of three characters: *, +, - can be inserted. Note that in this case there is no priority for the operators, that is, if + is the before multiplication, you must first execute the operation of addition, and then multiplication (1 - 2 * 3 must be interpreted as (1 - 2) * 3 = -3 and not -5). The computer asks the minimum possible value of any valid expression.
- 
+           <p> Avengers are trying to chase down Ronen army. They're in a large galaxy with n planet. The planet are connected through realms. Furthermore, the planet are designed in such a way that there is exactly one way to reach from one planet to another planet. Formally, the network of planet in the galaxy forms a Tree.
+The planet of the galaxy are conveniently numbered from 1 through n. Initially, Avengers and Ronen army are in some planet of the galaxy. In each second, both Ronen army and Avengers make a move. Ronen army moves first, followed by Avengers. Note that both the movements of Ronen army and Avengers happen within a second. In a single move, a player might stay in the same planet or can choose to move to some adjacent planet. Both the players know each other's positions at all times. When both Avengers and Ronen army are in the same planet, Avengers will attack Ronen army. Both the players play optimally, i.e. Ronen army will try to avoid their death as long as they can, and Avengers will try to catch him as soon as possible.
+You are given Q queries. In each query, you are given two integers, x, y, where x denotes the planet in which Avengers is present, and y denotes the same for Ronen army. You have to find the time at which Avengers will catch Ronen army.
 <br>Input
-<br>The first line of the input contains an integer T denoting the number of test cases. The first line of each test case contains a positive integer N. The second line contains N space separated integers A1, A2, ..., AN denoting the expression without the operators.
- 
+<br>The first line of the input contains an integer T denoting the number of the test cases.
+<br>The first line of each test case will contain two space separated integer n, Q denoting number of planet in the galaxy, and the number of queries, respectively.
+<br>Each of the next n - 1 lines contains two space separated integers u, v, denoting that there is an hallway between planet u and v in the galaxy.
+<br>Each of the next Q lines contains two space separated integers x, y, where x denotes the planet in which Avengers is present, whereas y denotes the planet in which Ronen army is present.
 <br>Output
-<br>For each test case, output a single line containing the minimal value of given expression.
- 
+<br>For each test case, output a single integer corresponding to time at which Avengers will catch Ronen army.
 <br>Constraints
-<br>•	1 ≤ T ≤ 105
-<br>•	1 ≤ N ≤ 10
-<br>•	-9 ≤ Ai ≤ 9
+<br>•	1 ≤ T ≤ 5
+<br>•	1 ≤ n, Q ≤ 105
+<br>•	1 ≤ u, v ≤ n
+<br>•	1 ≤ x, y ≤ n
 
- <br>If Input is:
-<br>2
-<br>3
-<br>1 2 3
-<br>1
-<br>9
- <br>What is the sum of the two otputs?
+<br>	If Input is:
+<br>	1
+<br>	3 2
+<br>	1 2
+<br>	2 3
+<br>	1 2
+<br>	2 3
+  <br><br>	What is the LCM of the two outputs?
+
+
 
 
             
