--- a/Ques5.html
+++ b/Ques5.html
@@ -67,28 +67,37 @@ background="codinggif.gif">
                     <h1> <u><br> Question 5 </u></h1>
                 </div>
              
-            <p> Bruce Banner has kept tesseract in a safe. But unfortunately he forgot the password to the safe where it is kept.
-But he knows how to hack the safe. To do this, you need to correctly answer questions asked by the embedded computer. The computer is very strange, and asks special questions, sometimes it can ask about 10000 question (really weird). Because of this, Bruce wants you to write a program that will help him to crack the safe.
-The questions are different, but there is only one type of question. Several numbers are given and between them one of three characters: *, +, - can be inserted. Note that in this case there is no priority for the operators, that is, if + is the before multiplication, you must first execute the operation of addition, and then multiplication (1 - 2 * 3 must be interpreted as (1 - 2) * 3 = -3 and not -5). The computer asks the minimum possible value of any valid expression.
- 
+            <p> Avenger’s spacecraft is being attacked by Thanos droids. Again, Thanos droids intend to disable rather than destroy their targets. They achieve this by introducing bugs in the program of the underlying software.
+<br>One important module of every navigation controller is this code :
+<br>n <- number of vertices in the graph
+<br>adj[n][n] <- adjacency matrix(0/1) of a simple undirected graph
+<br>connected[n][n] <- 2D matrix of size n * n
+<br>for (i=1; i<=n; i++)
+ <br> for (j=1; j<=n; j++)
+  <br>  connected[i][j] = adj[i][j]
+<br>for (p=1; p<=n; p++)    // runs only up to n-k after reprogramming
+ <br> for (i=1; i<=n; i++)
+  <br>  for (j=1; j<=n; j++)
+     <br> connected[i][j] = (connected[i][j]) || (i!=j && connected[i][p] && connected[p][j])
+<br>return connected
+<br>Due to reprogramming by Thanos droids, now the outer loop on p runs only from 1 to n-k (both inclusive).
+<br>Your task is to find the number of simple undirected unweighted graphs for which the reprogrammed code still returns the correct answer. Two graphs are considered different if their adjacency matrices are not identical.
 <br>Input
-<br>The first line of the input contains an integer T denoting the number of test cases. The first line of each test case contains a positive integer N. The second line contains N space separated integers A1, A2, ..., AN denoting the expression without the operators.
- 
+<br>The first line of the input contains an integer T denoting the number of test cases. The description of T test cases follows.
+<br>Each test case consists of single line containing two integers, n and k.
 <br>Output
-<br>For each test case, output a single line containing the minimal value of given expression.
- 
+<br>For each test case, output a single line containing the number of graphs (modulo 10^9+7) for which the buggy code returns correct answer.
 <br>Constraints
-<br>•	1 ≤ T ≤ 105
-<br>•	1 ≤ N ≤ 10
-<br>•	-9 ≤ Ai ≤ 9
+<br>•	1 ≤ T ≤ 17000
+<br>•	1 ≤ n ≤ 180
+<br>•	0 ≤ k ≤ n
 
- <br>If Input is:
-<br>2
+<br>If Input is:
 <br>3
-<br>1 2 3
-<br>1
-<br>9
- <br>What is the sum of the two otputs?
+<br>1 1
+<br>2 2
+<br>3 1
+                <br>What is the Sum of the outputs?
 
 
            
