--- a/ques1.html
+++ b/ques1.html
@@ -21,14 +21,14 @@ background= "coding5.gif">
                 <p> 
                  Iron man likes fighting games a lot. He owns a game called "Fight Club". In this game there are n players playing all the times. Every player has a power level (Ai). Every day one of the following 2 things happen:
 <br>•	Either one of these players get a power boost of X, now his power level increases by X.
-<br>•	Or two players X ad Y (with power levels Ax ad Ay) fight against each other ad if some player is having power level strictly greater than the other then he gets all the power (Ax+Ay) ad the power level of the other player becomes 0. If they have equal energies then it's a draw ad nothing happens.
+<br>•	Or two players X and Y (with power levels Ax ad Ay) fight against each other and if some player is having power level strictly greater than the other then he gets all the power (Ax+Ay) and the power level of the other player becomes 0. If they have equal energies then it's a draw and nothing happens.
 
 <br>The above game continues for d days. Now you have the information of what happened on each day.
 <br>•	1 i X : ith player gets a power of X.
-<br>•	2 U V : meas the player U ad V fight against each other.
+<br>•	2 U V : means the player U and V fight against each other.
 <br>After every day you need to print the maximum power level that ay player has (Note that you just need to print power level, player number does not matter here).
 <br>Input
-<br>First line will contain 2 integers n ad d denoting the number of players in the game ad number of days for which the game is played respectively.
+<br>First line will contain 2 integers n ad d denoting the number of players in the game and number of days for which the game is played respectively.
 <br>Next line contains n integers denoting the initial power levels of all the players.
 <br>Next d lines contain one of the 2 operations mentioned above.
 <br>Output
