--- a/ques1.html
+++ b/ques1.html
@@ -18,35 +18,19 @@ background= "coding5.gif">
 </div>
 <div transbox>
 
-                <p> 
-                 Iron man likes fighting games a lot. He owns a game called "Fight Club". In this game there are n players playing all the times. Every player has a power level (Ai). Every day one of the following 2 things happen:
-<br>•	Either one of these players get a power boost of X, now his power level increases by X.
-<br>•	Or two players X and Y (with power levels Ax ad Ay) fight against each other and if some player is having power level strictly greater than the other then he gets all the power (Ax+Ay) and the power level of the other player becomes 0. If they have equal energies then it's a draw and nothing happens.
-
-<br>The above game continues for d days. Now you have the information of what happened on each day.
-<br>•	1 i X : ith player gets a power of X.
-<br>•	2 U V : means the player U and V fight against each other.
-<br>After every day you need to print the maximum power level that ay player has (Note that you just need to print power level, player number does not matter here).
-<br>Input
-<br>First line will contain 2 integers n ad d denoting the number of players in the game and number of days for which the game is played respectively.
-<br>Next line contains n integers denoting the initial power levels of all the players.
-<br>Next d lines contain one of the 2 operations mentioned above.
-<br>Output
-<br>Print d lines with each integer(ith) denoting the Maximum power level after the ith day.
-<br>Constraints
-<br>•	1 <= n,d <= 105
-<br>•	1 <= Ai <= 109
-<br>•	1 <= i, U, V <= n
-<br>•	1 <= X <= 109
-  <br>If Input is:
-   <br>5 5
-                    <br>12 5 2 14 6
-                    <br>1 2 5
-                    <br>2 1 3
-                    <br>1 3 2
-                    <br>2 1 5
-                    <br>2 4 5
-<br>What is the sum of all prime factors of the Output(Count duplicate answers only once)?
+                <p> <br>
+                    There are a number of plants in Asgard. Each of these plants has been treated with some amount of pesticide. After each day, if any plant has more pesticide than the plant on its left, being weaker than the left one, it dies.
+                    You are given the initial values of the pesticide in each of the plants. Print the number of days after which no plant dies, i.e. the time after which there are no plants with more pesticide content than the 
+                    plant to their left.
+                    <br>For example, pesticide levels . Using a -indexed array, day  plants  and  die leaving . On day , plant  of the current array dies leaving . As there is no plant with a higher concentration of pesticide than the one to its left, plants stop dying after day .
+                    <br>Function Description
+                    <br>Complete the function poisonousPlants in the editor below. It must return an integer representing the number of days until plants no longer die from pesticide.
+                    poisonousPlants has the following parameter(s):
+                    <br>	p: an array of integers representing pesticide levels in each plant
+                    <br>Input Format
+                    <br>The first line contains an integer , the size of the array .
+                    <br>The next line contains  space-separated integers .
+                   
         
                  <form name= "myform" action="" method="post">
                     <div>
