--- a/ques 2.html
+++ b/ques 2.html
@@ -57,34 +57,18 @@ background="bgq2.gif">
                
 
             <p> <br>
-                Captain America  shows Sam a multiset of integers. (A multiset is a collection of elements where there can be duplicates). In every move Captain America  removes a maximum number from this multiset and divides it by 2 (integer division, which is rounded down).
-If after dividing, the number is still positive (greater than 0) he re-inserts it back into the multiset.
-Before the start of the game, Captain America  shows Sam the numbers in his multiset.
-Captain America  asks Sam, M questions. The i-th question will be denoted by Q[i], and Sam must find the value of the number Captain America  will be dividing (before he performs the division) after Q[i]-1 moves. That is, what is the value of the number on which the Q[i]-th division is performed?
-Can you help Sam and answer the queries?<br>
-<br>Input
-<br>•	The first line contains 2 space separated integers N, M denoting the initial size of the multiset and the number of questions respectively.
-<br>•	The next line contains N space separated integers, the initial elements of the multiset.
-<br>•	Of the next M lines, the i-th line will contain Q[i].
-<br>Output
-	<br>Output M lines, the i-th of which contains the answer for the i-th query.
-<br>Constraints
-<br>•	1 ≤ N, M ≤ 106
-<br>•	The queries are given in chronological order. That is, Q[i] > Q[i-1]
-<br>•	Every element of the multiset will be a positive integer less than 263
-<br>•	It's guaranteed that the set will contain at least one element at the time of any query.
-<br>Example
-<br>Input:
-<br>4 6
-<br>8 5 3 1
-<br>1
-<br>2
-<br>3
-<br>4
-<br>6
-<br>8
-               <br> <br>What will be the sum of EVEN answers for the above input?
-
+                Given N planets numbered from 1 to N . A skrull at planet 1, jumps from planet to planet in multiples of Aj (Aj, 2Aj, 3Aj).
+                j is specific to the skrull. Whenever a skrull reaches a planet, it makes a small colony there. You have to find out how many planets, from 1 to N, are left not colonised after all K skrulls have reached the end. Each skrull has its own jump factor denoted by Aj, and each skrull starts at planet number 1.
+               <br><br> Input:
+                The first line consists of a integer T denoting the number of testcases. T test cases follow. Each test case consists of two lines of input. The first line consists of two integers: N, which denotes the number of planets; and K, which denotes the number of skrulls. Second line of each test case consists of K space seperated integers denoting the jumblip factor of skrulls.
+                <br><br>Output:
+                For each testcase, in a new line, print a  single integer denoting the number of planets which  are left not colonised.
+                <br><br>
+                Constraints:<br>
+                1 <= T <= 100<br>
+                1 <= N <= 107<br>
+                1 <= K <= 107<br>
+                1 <= Aj <= 100<br>
             
                  <form name= "myform" action=" " method="post">
                     <div>
