--- a/pass1.html
+++ b/pass1.html
@@ -76,7 +76,7 @@ var i=0;
  
  if(i<=3)
 {
-       if(a=="vision")
+       if(a=="vision"||a=="VISION"||a=="Vision")
        { alert("You got it right " );
          window.location.replace("ques 2.html   ");
        }
