--- a/pass3.html
+++ b/pass3.html
@@ -76,7 +76,7 @@ var i=0;
  
  if(i<=3)
 {
-       if(a=="bucky")
+       if(a=="bucky" or a=="BUCKY"or a=="Bucky")
        { alert("You got it right " );
          window.location.replace("ques4.html   ");
        }
