--- a/pass4.html
+++ b/pass4.html
@@ -78,7 +78,7 @@ var i=0;
  
  if(i<=3)
 {
-       if(a=="sokovia")
+       if(a=="sokovia" or a=="SOKOVIA"or a=="Sokovia")
        { alert("You got it right " );
          window.location.replace("Ques5.html   ");
        }
