--- a/pass2.html
+++ b/pass2.html
@@ -77,7 +77,7 @@ var i=0;
  
  if(i<=3)
 {
-       if(a=="asgard" or a=="ASGARD"or a=="Asgard")
+       if(a=="asgard" || a=="ASGARD" || a=="Asgard")
        { alert("You got it right " );
          window.location.replace("ques3.html   ");
        }
