--- a/timer.html
+++ b/timer.html
@@ -36,7 +36,7 @@
 
 </script>
 
-
+var i=0;
 <script>
 // Set the date we're counting down to
 var countDownDate = new Date("Oct 10, 2019 23:35:25").getTime();
@@ -64,6 +64,8 @@ var x = setInterval(function() {
   if (distance < 0) {
     clearInterval(x);
     document.getElementById("demo").innerHTML = "EXPIRED";
+      i++;
+      
   }
 }, 1000);
 
