--- a/Ques5.html
+++ b/Ques5.html
@@ -47,7 +47,7 @@
 {
        if(a=="10")
        { alert("You got it right " );
-         window.location.replace("newend.html   ");
+         window.location.replace("pass5.html");
        }
        else
        {i++;
