--- a/pass5.html
+++ b/pass5.html
@@ -73,9 +73,9 @@ var i=0;
  
  if(i<=3)
 {
-    if(a=="vision" || a=="VISION" || a=="Vision")
+    if(a=="#jdgce$@s")
        { alert("You got it right " );
-         window.location.replace("ques 2.html   ");
+         window.location.replace("newend.html   ");
        }
        else
        {i++;
