--- a/timer.html
+++ b/timer.html
@@ -64,7 +64,8 @@ var x = setInterval(function() {
   if (distance < 0) {
     clearInterval(x);
     document.getElementById("demo").innerHTML = "EXPIRED";
-      i++;
+      alert("The time is up!");
+      
       
   }
 }, 1000);
