--- a/ques1.html
+++ b/ques1.html
@@ -28,7 +28,7 @@ background= "coding5.gif">
 <br>•	2 U V : means the player U and V fight against each other.
 <br>After every day you need to print the maximum power level that ay player has (Note that you just need to print power level, player number does not matter here).
 <br>Input
-<br>First line will contain 2 integers n ad d denoting the number of players in the game and number of days for which the game is played respectively.
+<br>First line will contain 2 integers 'n' and 'd', denoting the number of players in the game and number of days for which the game is played respectively.
 <br>Next line contains n integers denoting the initial power levels of all the players.
 <br>Next d lines contain one of the 2 operations mentioned above.
 <br>Output
