--- a/ques1.html
+++ b/ques1.html
@@ -32,7 +32,7 @@ background= "coding5.gif">
 <br>Next line contains n integers denoting the initial power levels of all the players.
 <br>Next d lines contain one of the 2 operations mentioned above.
 <br>Output
-<br>Print d lines with each integer(ith) denoting the Maximum power level after the ith day.
+<br>Contains 'd' lines with each integer(ith) denoting the Maximum power level after the ith day.
 <br>Constraints
 <br>•	1 <= n,d <= 105
 <br>•	1 <= Ai <= 109
