--- a/attempts.html
+++ b/attempts.html
@@ -12,7 +12,7 @@
                    <h1>Thanks you for playing Code Quest <br><br>
                      You have exhausted all your attempts!</h1><br><br>
 
-                     <h4>"Heroes are made by the path they choose, not the powers they are graced with"</h4>
+                     <h4>"Heroes are made by the path they choose, not the powers they are graced with"<br></h4><br>
 
             </header>
 
