--- a/ques1.html
+++ b/ques1.html
@@ -24,7 +24,7 @@ background= "coding5.gif">
 <br>•	Or two players X and Y (with power levels Ax ad Ay) fight against each other and if some player is having power level strictly greater than the other then he gets all the power (Ax+Ay) and the power level of the other player becomes 0. If they have equal energies then it's a draw and nothing happens.
 
 <br>The above game continues for d days. Now you have the information of what happened on each day.
-<br>•	1 i X : ith player gets a power of X.
+<br>•	1 i X : ith player gets  power of X.
 <br>•	2 U V : means the player U and V fight against each other.
 <br>After every day you need to print the maximum power level that ay player has (Note that you just need to print power level, player number does not matter here).
 <br>Input
@@ -46,7 +46,8 @@ background= "coding5.gif">
                     <br>1 3 2
                     <br>2 1 5
                     <br>2 4 5
-<br>What is the sum of all prime factors of the Output(Count duplicate answers only once)?
+                    <br>     Count duplicate answers only once in all the above inputs
+<br>What is the sum of all prime factors of the Output?
         
                  <form name= "myform" action="" method="post">
                     <div>
