--- a/login test.html
+++ b/login test.html
@@ -83,7 +83,7 @@ document.addEventListener('contextmenu', event => event.preventDefault());
         //disable inspect shortcuts
         
         document.onkeydown = function(e) {
-        if(event.keyCode == 123) {
+        if(event.keyCode == 116 || 122 || 123) {
         return false;
         }
         if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
