--- a/ques4.html
+++ b/ques4.html
@@ -77,19 +77,19 @@ background="codinggif2.gif">
                 </div>
                 
 
-           <p> Avengers are trying to chase down Ronan army. They're in a large galaxy with n planet. The planet are connected through realms. Furthermore, the planet are designed in such a way that there is exactly one way to reach from one planet to another planet. Formally, the network of planet in the galaxy forms a Tree.
-The planet of the galaxy are conveniently numbered from 1 through n. Initially, Avengers and Ronan army are in some planet of the galaxy. In each second, both Ronan army and Avengers make a move. Ronan army moves first, followed by Avengers. Note that both the movements of Ronen army and Avengers happen within a second. In a single move, a player might stay in the same planet or can choose to move to some adjacent planet. Both the players know each other's positions at all times. When both Avengers and Ronen army are in the same planet, Avengers will attack Ronen army. Both the players play optimally, i.e. Ronen army will try to avoid their death as long as they can, and Avengers will try to catch him as soon as possible.
+           <p> Avengers are trying to chase down Ronan army. They're in a large galaxy with n planets. The planets are connected through realms. Furthermore, the planets are designed in such a way that there is exactly one way to reach from one planet to another planet. Formally, the network of planets in the galaxy forms a Tree.
+The planets of the galaxy are conveniently numbered from 1 through n. Initially, Avengers and Ronan army are in some planet of the galaxy. In each second, both Ronan army and Avengers make a move. Ronan army moves first, followed by Avengers. Note that both the movements of Ronen army and Avengers happen within a second. In a single move, a player might stay in the same planet or can choose to move to some adjacent planet. Both the players know each other's positions at all times. When both Avengers and Ronan army are in the same planet, Avengers will attack Ronan army. Both the players play optimally, i.e. Ronan army will try to avoid their death as long as they can, and Avengers will try to catch them as soon as possible.
 You are given Q queries. In each query, you are given two integers, x, y, where x denotes the planet in which Avengers is present, and y denotes the same for Ronan army. You have to find the time at which Avengers will catch Ronan army.
 <br>Input
 <br>The first line of the input contains an integer T denoting the number of the test cases.
-<br>The first line of each test case will contain two space separated integer n, Q denoting number of planet in the galaxy, and the number of queries, respectively.
+<br>The first line of each test case will contain two space separated integer n, Q denoting number of planets in the galaxy, and the number of queries, respectively.
 <br>Each of the next n - 1 lines contains two space separated integers u, v, denoting that there is an hallway between planet u and v in the galaxy.
 <br>Each of the next Q lines contains two space separated integers x, y, where x denotes the planet in which Avengers is present, whereas y denotes the planet in which Ronan army is present.
 <br>Output
 <br>For each test case, output a single integer corresponding to time at which Avengers will catch Ronan army.
 <br>Constraints
 <br>•	1 ≤ T ≤ 5
-<br>•	1 ≤ n, Q ≤ 105
+<br>•	1 ≤ n, Q ≤ 10^5
 <br>•	1 ≤ u, v ≤ n
 <br>•	1 ≤ x, y ≤ n
 
