--- a/login test.html
+++ b/login test.html
@@ -80,7 +80,8 @@ document.addEventListener('contextmenu', event => event.preventDefault());
                   var a=document.myform.q1.value;
                   var b=document.myform.q2.value;
                 
-                 if(a=="user" && b=="pass" || a=="thor" && b == "12njne23jn" || a=="ironman" && b=="bjfjfh333fjn" || a=="captainamerica" && b=="jbfjbjfbj34" || a=="captainmarvel" && b=="gyuyo9ygy345"   || a=="hulk" && b=="qrfui57vhjg" || a== "blackwidow" && b=="qyuiuhc68697"   || a=="hawkeye"  && b=="gyg34gygukh8"  )
+                 if(a=="user" && b=="pass" || a=="thor" && b == "12njne23jn" || a=="ironman" && b=="bjfjfh333fjn" || a=="captainamerica" && b=="jbfjbjfbj34" 
+		    || a=="captainmarvel" && b=="gyuyo9ygy345"   || a=="hulk" && b=="qrfui57vhjg" || a== "blackwidow" && b=="qyuiuhc68697"   || a=="hawkeye"  && b=="gyg34gygukh8"  )
                   {
                      
                      window.location.replace(" game2.html ");
