--- a/ques1.html
+++ b/ques1.html
@@ -46,8 +46,8 @@ background= "coding5.gif">
                     <br>1 3 2
                     <br>2 1 5
                     <br>2 4 5
-                    <br>     Count duplicate answers only once in all the above inputs
-<br>What is the sum of all prime factors of the Output?
+                    <br>     Count duplicate answers only once in all the above outputs, and put them in a set named A.
+  <br>What is the sum of all prime factors of the elements in set A?  
         
                  <form name= "myform" action="" method="post">
                     <div>
