--- a/timer.html
+++ b/timer.html
@@ -18,14 +18,9 @@
 
 
   
-  <div class="row">
-    <div class = "logo">
-                <img src="logogame final.png">
-                <img id="inl" src="white.png">
-     </div>
         <ul class="main-nav">
           <li>
-          <p>  Welcome to Code Quest</p>
+          <p>  Welcome to oops quiz</p>
         </li>   
           <li>  
         <p id="demo" class="timer" >Time Left</p>
