--- a/pass4.html
+++ b/pass4.html
@@ -13,18 +13,14 @@ background="im4.jpg">
              <br>
 <br>
              <h2>Congratulations! </h2> <br>
-                <p>
-                        To solve this little fix,<br>
-                        It's hidden behind a wall of bricks,<br>
-                        Here you get whatever you were wishing,<br>
-                        This is where you must go looking.
+                <p>Which new chip has google developed as a Quantum Computing Development?
                 
             </p><br><hr>
 
         <form name= "myform" action=" " method="post">
             <div>
 
-               <label for="Solution">  Enter solution to riddle obtained at location<br> </label>
+               <label for="Solution">  Enter solution to riddle </label>
                <input type="text" autocomplete="off" name="q1"> 
             </div>
             <div>       
@@ -78,7 +74,7 @@ var i=0;
  
  if(i<=3)
 {
-       if(a=="sokovia" || a=="SOKOVIA" || a=="Sokovia")
+       if(a=="sycamore")
        { alert("You got it right " );
          window.location.replace("Ques5.html   ");
        }
