--- a/pass1.html
+++ b/pass1.html
@@ -5,7 +5,7 @@
     </head>
     <body  onload="noBack();"
 
-onpageshow="if(event.persisted) noBack():" onunload="" ; background="im11.jpg">
+onpageshow="if(event.persisted) noBack():" onunload="" ; background="coding2.jpg">
         <header>
            
 
