--- a/pass3.html
+++ b/pass3.html
@@ -6,7 +6,7 @@
     <body  onload="noBack();"
 
 onpageshow="if(event.persisted) noBack():" onunload="" ;
-background="im6.jpg">
+background="coding1.jpg">
         <header>
           
             <br>
