--- a/pass5.html
+++ b/pass5.html
@@ -12,7 +12,7 @@ onpageshow="if(event.persisted) noBack():" onunload="" ; background="aven15.jpg"
 <br><br>
                  <h2>Congratulations! </h2> <br>
                <br><br> <p>
-                    Please Enter the 9-digit string obtained in the mobile app.
+                    How many digits does a GUID contain?
             </p><br>
             
 
@@ -73,7 +73,7 @@ var i=0;
  
  if(i<=3)
 {
-    if(a=="#jdgce$@s")
+    if(a=="128")
        { alert("You got it right " );
          window.location.replace("newend.html   ");
        }
